--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,16 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: #f1f5f9;
 }
 
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 		monospace;
+}
+
+.wrapper {
+	background-color: #f1f5f9;
+	height: 800px;
+	font-family: helvetica;
+	margin: 0;
 }
