--- a/src/styles/main-card.css
+++ b/src/styles/main-card.css
@@ -1,15 +1,15 @@
 .card-section {
 	display: flex;
 	justify-content: center;
-	width: 100%;
+	align-items: center;
 }
 .card-container {
-	margin-top: 5%;
+	margin-top: 10%;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	width: 100%;
+	width: 70%;
 }
 
 .section-right {
@@ -23,14 +23,34 @@
 }
 
 .card-right {
-	border: 1px solid lightgrey;
 	border-radius: 3px;
 	border-left: none;
-	height: 600px;
+	height: 500px;
+}
+
+.card-left {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 200px;
+}
+
+.cardbody-left {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
 }
 
 .header {
 	font-size: 30px;
+	width: 400px;
+}
+
+.card-text {
+	font-size: 14px;
+	width: 300px;
 }
 
 .cardbody-container {
@@ -40,66 +60,109 @@
 }
 
 .cardbody {
-	height: 250px;
+	height: 210px;
 	width: 350px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	border: 1px solid lightgrey;
+	justify-content: space-between;
+	text-align: center;
 	padding: 10px;
 	margin: 5%;
+	background: white;
+	box-shadow: 2px 2px 4px lightgray;
+	border-radius: 5px;
+}
+
+.cardbody-btn {
+	background: #56bac1;
+	border: none;
+	border-radius: 8px;
+	height: 45px;
+	width: 270px;
+	border-color: #36999f;
+	color: white;
+	font-weight: bold;
+}
+
+.cardbody-btn:hover {
+	background: #36999f;
+	border: 1px solid lightgray;
+}
+
+.cardbody-btn:active {
+	box-shadow: 4px 4px 20px darkcyan;
+	border-color: #36999f;
 }
 
 .cardbody-header-container {
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: row;
+
 	width: 100%;
+	margin-right: 30px;
+	margin-top: -20px;
 }
 
 .cardbody-header {
 	border: 1px solid darkcyan;
 	background-color: darkcyan;
 	color: white;
-	width: 40px;
-	height: 40px;
+	width: 60px;
+	height: 60px;
 	border-radius: 100%;
 	text-align: center;
-	margin-right: 100px;
-	padding-top: 3px;
+	padding-top: 10px;
 	position: absolute;
+	z-index: 10;
+	font-size: 30px;
+	box-shadow: 2px 2px 4px rgba(0, 139, 139, 0.603);
 }
 
 .cardbody-text {
 	margin-top: 20%;
 }
 
-.cardbody-btn {
-}
-.card-left {
-	display: flex;
-	flex-direction: column;
-	border: 1px solid lightgrey;
-	border-radius: 3px;
-	border-right: none;
-}
-
-.cardbody-left {
-	display: block;
-	width: 100%;
-}
-
 .cardbody-mobile {
 	display: none;
 }
-.card-text {
-	font-size: 14px;
+
+.cardbody-contact {
+	width: 100%;
+}
+
+.sidebar {
+	background-color: #354052;
 }
 
 @media (max-width: 600px) {
-	.cardbody-left {
-		display: none;
+	.card-section {
+		width: 60%;
+		margin-left: 17%;
 	}
+	.card-container {
+		width: 50%;
+	}
+
+	.cardbody-left {
+		margin-bottom: 10%;
+	}
+
+	.header {
+		width: 200px;
+		text-align: center;
+	}
+
+	.card-text {
+		text-align: center;
+		font-size: 18px;
+	}
+
+	.cardbody {
+		width: 300px;
+	}
+
 	.cardbody-mobile-container {
 		display: flex;
 		justify-content: center;
@@ -114,9 +177,6 @@
 	}
 }
 
-.sidebar {
-	background-color: darkblue;
-}
-
 .sidebar-toggle {
+	transform: none;
 }
