--- a/src/styles/main-card.css
+++ b/src/styles/main-card.css
@@ -2,6 +2,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	position: relative;
+	z-index: 1000;
 }
 .card-container {
 	margin-top: 10%;
