--- a/src/styles/main-card.css
+++ b/src/styles/main-card.css
@@ -4,6 +4,7 @@
 	align-items: center;
 	position: relative;
 	z-index: 1000;
+	width: 100%;
 }
 .card-container {
 	margin-top: 10%;
@@ -11,7 +12,7 @@
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	width: 70%;
+	width: 100%;
 }
 
 .section-right {
@@ -27,7 +28,6 @@
 .card-right {
 	border-radius: 3px;
 	border-left: none;
-	height: 500px;
 }
 
 .card-left {
@@ -48,6 +48,7 @@
 
 .header {
 	font-size: 30px;
+	font-weight: bold;
 }
 
 .card-text {
@@ -84,6 +85,7 @@
 	border-color: #36999f;
 	color: white;
 	font-size: 18px;
+	font-weight: bold;
 }
 
 .cardbody-btn:hover {
@@ -94,6 +96,10 @@
 .cardbody-btn:active {
 	box-shadow: 4px 4px 20px darkcyan;
 	border-color: #36999f;
+}
+
+.cardbody-btn:focus {
+	outline: 0;
 }
 
 .cardbody-header-container {
@@ -129,6 +135,7 @@
 span {
 	font-weight: bold;
 	color: darkcyan;
+	font-size: 20px;
 }
 
 .cardbody-mobile {
@@ -137,10 +144,6 @@ span {
 
 .cardbody-contact {
 	width: 100%;
-}
-
-.sidebar {
-	background-color: #354052;
 }
 
 @media (max-width: 600px) {
@@ -164,6 +167,7 @@ span {
 	.card-text {
 		text-align: center;
 		font-size: 18px;
+		width: 300px;
 	}
 
 	.cardbody {
@@ -182,8 +186,4 @@ span {
 	.cardbody-container {
 		flex-direction: column;
 	}
-}
-
-.sidebar-toggle {
-	transform: none;
 }
