--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	height: 100%;
 }
 
 code {
@@ -16,4 +17,50 @@ code {
 	background-color: #f1f5f9;
 	font-family: 'Nunito Sans', sans-serif;
 	margin: 0;
+}
+
+#outer-container {
+	background-color: #f1f5f9;
+}
+
+#page-wrap {
+	overflow: scroll;
+
+	background-color: #f1f5f9;
+}
+
+.my-class {
+	border: none;
+	position: absolute;
+	z-index: 1000;
+}
+
+.bm-burger-button {
+	position: absolute;
+	width: 36px;
+	height: 30px;
+	left: 36px;
+	top: 15px;
+}
+
+.bm-burger-button button {
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+	height: 24px;
+	width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+	background: #bdc3c7;
 }
