--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,17 @@
 .footer {
 	background: #fff;
+	height: 40px;
 }
 
 .footer-container {
-	margin: 5%;
+	display: flex;
+	justify-content: flex-end;
+	align-content: center;
+	margin-top: 2%;
+}
+
+.footer-content {
+	font-size: 12px;
+	color: grey;
+	margin-right: 20px;
 }
